--- a/code/chap03mine.org
+++ b/code/chap03mine.org
@@ -384,3 +384,5 @@ Select table1, which is the second table on the page.
 
 #+RESULTS:
 [[file:chap03fig/test.png]]
+
+The model does not match at all
