--- a/code/chap04mine.org
+++ b/code/chap04mine.org
@@ -59,7 +59,7 @@
 What happens if we start with an initial population above the carrying capacity, like 20 billion?
 The the model with initial populations between 1 and 20 billion, and plot the results on the same axes.
 
-#+BEGIN_SRC ipython :session :results raw drawer :file chap04fig/abovecap.png
+#+BEGIN_SRC ipython :session :results raw drawer :file chap04fig/abovecap.png :exports both
   ax = census.plot()
   for system.p0 in range(1,20):
       temp_sys = system.copy()
@@ -90,7 +90,7 @@ Is there an interest rate FGB could pay so that your balance at the end of each 
 
 Hint: modsim provides a function called exp, which is a wrapper for the NumPy function exp.
 
-#+BEGIN_SRC ipython :session :results raw drawer
+#+BEGIN_SRC ipython :session :results raw drawer :exports both
   import sympy as sp
   import numpy as np
 
@@ -122,7 +122,7 @@ How much would you have in each account at the end of Year 10?
 How about Year 20?
 And Year 100?
 
-#+BEGIN_SRC ipython :session :results raw drawer
+#+BEGIN_SRC ipython :session :results raw drawer :exports both
   b1, b2 = sp.symbols('b1 b2')
   pcu = p0 + b1 * t + b2 * t ** 2
   pcuyrs = pcu.subs(p0, 1000).subs(b1, 30).subs(b2, 0.5)
