--- a/code/ELEPHANT TUSK.ipynb
+++ b/code/ELEPHANT TUSK.ipynb
@@ -145,7 +145,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "system = System(t0 = 2013, tn = 2200, pop = elephant_database[2013],\n",
