--- a/code/rabbits2mine.ipynb
+++ b/code/rabbits2mine.ipynb
@@ -425,7 +425,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plot_results(system, title='Proportional growth model')"
